--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   ],
   "dependencies": {
     "bootstrap": "4.0",
-    "jquery": "3.*"
+    "jquery": "3.*",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "hover": "^2.1.1"
